basic directional hitboxes